# hello_macro

./: Cargo.toml  README.md  main.rs
macro1/: Cargo.toml
macro1/src/: lib.rs
macro1/tests/: 01-test.rs
macro2/: Cargo.toml
macro2/src/: lib.rs
